--- a/TrafficComet.JsonFile.LogWriter/TrafficComet.JsonFile.LogWriter.csproj
+++ b/TrafficComet.JsonFile.LogWriter/TrafficComet.JsonFile.LogWriter.csproj
@@ -4,12 +4,15 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <Authors>Maciej Kacprzak</Authors>
     <Company>Maciej Kacprzak</Company>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
+    <Copyright>Maciej Kacprzak</Copyright>
+    <PackageLicenseUrl>https://github.com/maciur/TrafficComet</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/maciur/TrafficComet</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.0" />
-    <PackageReference Include="TrafficComet.Abstracts" Version="2.2.0" />
+    <PackageReference Include="TrafficComet" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
